2004-04-18  Mark McLoughlin  <mark@skynet.ie>

	Patch from Ville Skyttä <ville.skytta@iki.fi>

	* menu-spec.xml: editorial changes and typo fixes.

2003-12-12  Waldo Bastian  <bastian@kde.org>
        * menu-spec.xml: Correct example in "Legacy Menu Hierarchies"

2003-11-09  Heinrich Wendel  <h_wendel@cojobo.net>
    * menu-spec.xml: patch for categories based on Suse 9.0
	* menu-spec.xml: Grahpics -> Graphics
	* menu-spec.xml: DTD fix
	* menu.dtd: added dtd
	* testsuite: fixed errors highlighted by havoc

2003-10-23  Havoc Pennington  <hp@redhat.com>

	* menu-spec.xml: clarify how <Move> elements are resolved

2003-10-21  Havoc Pennington  <hp@redhat.com>

	* create autotools setup
