@@ -1,3 +1,8 @@
+2004-05-07  Mark McLoughlin  <mark@skynet.ie>
+
+	* menu-spec.xml: fix typo in <Menuname> description. Its
+	inline_header rather than inline_title according to the DTD.
+
 2004-04-18  Mark McLoughlin  <mark@skynet.ie>
 
 	Patch from Ville Skyttä <ville.skytta@iki.fi>
